# xtypes_generator

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  _c_r_c_8h.html  _c_r_c_8h_source.html  _r_e_a_d_m_e_8md.html  _relations_8md.html  _templates_8md.html  _x_type_8hpp.html  _x_type_8hpp_source.html  _x_type_registry_8hpp.html  _x_type_registry_8hpp_source.html  annotated.html  class_c_r_c-members.html  class_c_r_c.html  classes.html  classxtypes_1_1_x_type-members.html  classxtypes_1_1_x_type.html  dir_d44c64559bbebec7f509842c48db8b23.html  dir_e68e8157741866f444e17edd764ebbae.html  enums_8hpp.html  enums_8hpp_source.html  files.html  functions.html  functions_func.html  functions_type.html  functions_vars.html  globals.html  globals_defs.html  hierarchy.html  index.html  install_dependencies.sh  manifest.xml  md__home_dfki_8uni-bremen_8de_pchowdhury_modkom_sw_backbone_representation_xtypes_generator_doc__relations.html  md__home_dfki_8uni-bremen_8de_pchowdhury_modkom_sw_backbone_representation_xtypes_generator_doc__templates.html  menudata.js  namespacemembers.html  namespacemembers_enum.html  namespacemembers_type.html  (+25 more)
.circleci/: config.yml  prepare_build.sh
.github/workflows/: ci.yml
cmake/: Tools.cmake.in  config.cmake.in  dependencies.cmake
doc/: Doxyfile.in  Relations.md  Templates.md  template.yaml
include/: XType.hpp  XTypeRegistry.hpp  enums.hpp  structs.hpp  utils.hpp
post_install/: CMakeLists.txt
pybind/: _pyCustomBinds.cpp  pyEnums.cpp  pyStructs.cpp  pyUtils.cpp  pyXTypeRegistry.cpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  classes_6.js  defines_0.js  enums_0.js  enums_1.js  enums_2.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  (+50 more)
src/: XType.cpp  XTypeRegistry.cpp  structs.cpp
templates/: xtype.yaml
test/: CMakeLists.txt  unit_tests.cpp
test/xtypes_generator_test_type/: CMakeLists.txt
test/xtypes_generator_test_type/templates/: test_type.yml
xtypes_generator/: __init__.py  file_handling.py  xtypesgen.py
xtypes_generator/data/: CMakeLists.txt.in  base_class.cpp.in  base_class.hpp.in  config.cmake.in  pybind_class.cpp.in  pybind_custom_binds.cpp.in  pybind_module.cpp.in  pybind_registry.cpp.in  registry.hpp.in  skeleton.cpp.in  skeleton.hpp.in  type_conversion.yml  xtypes.hpp.in
xtypes_generator/scripts/: __init__.py  copy_files.py  create_xtypes_project.py  get_and_copy_files.py  get_files.py  registry_generator.py  types_generator.py
